BJS2-1594 Test